test/error/sema/unwrapped-cant-be-mutable.dsk
let S = struct
    x: int
end

let f = (x: ?S) -> void
    if x: mut y then
        echo(y.x)
    end
end
